# authentic

./: Cargo.toml  README.md
.github/workflows/: msrv.yml
src/: credential.rs  hyper.rs  lib.rs  reqwest.rs  sensitive.rs
src/credential/: loops.rs  mod.rs  simple.rs  step.rs
src/credential/step/: jwt.rs
src/reqwest/: asynch.rs  blocking.rs  mod.rs
tests/: hyper_basic.rs  reqwest_async_basic.rs  reqwest_basic.rs  reqwest_blocking_basic.rs  reqwest_blocking_jwt.rs
